apply plugin: 'application'

group 'sandarukasa'

// For records
sourceCompatibility = 15
tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

tasks {
    run {
        mainClassName = 'sandarukasa.SKTG.Main'
        workingDir = 'run'
        mkdir(workingDir)
    }
}

repositories {
    mavenCentral()
    maven {
        // for net.kodehawa:imageboard-api
        url "https://dl.bintray.com/kodehawa/maven"
    }
}

dependencies {
    implementation 'org.telegram:telegrambots:5.0.1'
    implementation 'org.slf4j:slf4j-jdk14:1.7.30'
    implementation 'com.vk.api:sdk:0.5.12'
    implementation 'net.kodehawa:imageboard-api:2.4.1'
    implementation 'net.bramp.ffmpeg:ffmpeg:0.6.2'
    implementation 'org.xerial:sqlite-jdbc:3.34.0'
}
